--- a/src/main/js/index.html
+++ b/src/main/js/index.html
@@ -7,7 +7,8 @@
     <style>
       .map {
         width: 100%;
-        height:400px;
+        height: 80%;
+        position:fixed
       }
     </style>
 </head>
