--- a/src/main/js/index.html
+++ b/src/main/js/index.html
@@ -1,18 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Custom Polygon Styles</title>
+    <title>Israeli sunsets</title>
     <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
+<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
     <style>
       .map {
         width: 100%;
         height: 80%;
         position:fixed
       }
+      /* Navbar container */
+      .navbar {
+          overflow: hidden;
+          background-color: #333;
+          font-family: Arial;
+      }
+
+      /* Links inside the navbar */
+      .navbar a {
+          float: left;
+          font-size: 16px;
+          color: white;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+      }
+
+      /* The dropdown container */
+      .dropdown {
+          float: left;
+          overflow: hidden;
+      }
+
+      /* Dropdown button */
+      .dropdown .dropbtn {
+          font-size: 16px;
+          border: none;
+          outline: none;
+          color: white;
+          padding: 14px 16px;
+          background-color: inherit;
+          font-family: inherit; /* Important for vertical align on mobile phones */
+          margin: 0; /* Important for vertical align on mobile phones */
+      }
+
+      /* Add a red background color to navbar links on hover */
+      .navbar a:hover, .dropdown:hover .dropbtn {
+          background-color: red;
+      }
+
+      /* Dropdown content (hidden by default) */
+      .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f9f9f9;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+      }
+
+      /* Links inside the dropdown */
+      .dropdown-content a {
+          float: none;
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+          text-align: left;
+      }
+
+      /* Add a grey background color to dropdown links on hover */
+      .dropdown-content a:hover {
+          background-color: #ddd;
+      }
+
+      /* Show the dropdown menu on hover */
+      .dropdown:hover .dropdown-content {
+          display: block;
+      }
     </style>
 </head>
 <body>
+<div class="navbar">
+    <div class="dropdown">
+        <button class="dropbtn" id="mapbutton">Map: Low
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+            <a href="javascript:;" onclick="myCustomModule.changeMap('low');">Low Clouds</a>
+            <a href="javascript:;" onclick="myCustomModule.changeMap('medium');">Medium Clouds</a>
+            <a href="javascript:;" onclick="myCustomModule.changeMap('high');">High Clouds</a>
+<!--            <a href="javascript:;" onclick="myCustomModule.changeMap('sunset');">Sunset beauty</a>-->
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn" id="daybutton">Day:0
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+            <a href="javascript:;" onclick="myCustomModule.changeDay(0);">Today</a>
+            <a href="javascript:;" onclick="myCustomModule.changeDay(1);">Tomorrow</a>
+            <a href="javascript:;" onclick="myCustomModule.changeDay(2);">After Tomorrow</a>
+        </div>
+    </div>
+</div>
 <div id="map" class="map"></div>
 <script src="index.js"></script>
 </body>
