--- a/src/main/js/index.html
+++ b/src/main/js/index.html
@@ -8,7 +8,7 @@
     <style>
       .map {
         width: 100%;
-        height: 80%;
+        height: 95%;
         position:fixed
       }
       /* Navbar container */
@@ -92,7 +92,7 @@
             <a href="javascript:;" onclick="myCustomModule.changeMap('low');">Low Clouds</a>
             <a href="javascript:;" onclick="myCustomModule.changeMap('medium');">Medium Clouds</a>
             <a href="javascript:;" onclick="myCustomModule.changeMap('high');">High Clouds</a>
-<!--            <a href="javascript:;" onclick="myCustomModule.changeMap('sunset');">Sunset beauty</a>-->
+            <a href="javascript:;" onclick="myCustomModule.changeMap('sunset');">Sunset beauty</a>
         </div>
     </div>
     <div class="dropdown">
