added slider, but not working

--- a/src/main/js/index.html
+++ b/src/main/js/index.html
@@ -129,6 +129,12 @@
       .ol-popup-closer:after {
           content: "✖";
       }
+
+      .slider-div {
+          top: 65px;
+          left: .5em;
+      }
+
     </style>
 </head>
 <body>
